--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,57 @@
 * {
     box-sizing: border-box;
 }
+
+body {
+    background-color: black;
+    color: yellow;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+img {
+    display: flex;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 95vw;
+    max-height: 90vh;
+}
+
+.messages {
+    text-align: center;
+    font-size: 2rem;
+}
+
+#refresh-btn {
+    display: flex;
+    text-align: center;
+    font-size: 2.75rem;
+    padding: 20px;
+    border-radius: 20px;
+    border: none;
+    background-color: limegreen;
+    color: white;
+    cursor: pointer;
+}
+
+input {
+    background-color: antiquewhite;
+    font-size: 2rem;
+    margin-top: 20px;
+    border-radius: 20px;
+    padding: 20px;
+}
+
+#search-btn {
+    display: flex;
+    text-align: center;
+    font-size: 1.5rem;
+    background-color: limegreen;
+    color: white;
+}
